Added heroku deployment

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ django-restframework = "*"
 djangorestframework = "*"
 black = "*"
 django-cors-headers = "*"
+gunicorn = "*"
+whitenoise = "*"
 
 [dev-packages]
 
